<resources>
    <string name="app_name">EasyLab</string>

    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">输入的账号格式有误</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="new_user_sign_up">"新用户注册"</string>
    <string name="forget_password">"忘记密码"</string>
    <string name="type_in_username">用户名（字母和数字）</string>
    <string name="type_in_password">密码（不少于8位）</string>
    <string name="type_in_sid">学号</string>
    <string name="type_in_name">姓名</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="fragment_name_title_label">姓名</string>
    <string name="fragment_level_title_ID">内部标识</string>
    <string name="label_choose_appointment_date">请选择日期</string>
    <string name="label_choose_start_appointment_time">请选择开始时间</string>
    <string name="label_choose_end_appointment_time">请选择结束时间</string>

    <string name="label_appointment_team_member">请添加成员</string>
    <string name="label_choose_appointment_room">请选择实验室</string>
    <string name="label_appointment_room_device">实验桌设备</string>

    <string name="label_dialog_member">请添加成员</string>


    <string name="title_fragment_s_appontment">预约信息</string>
    <string name="title_activity_manager">Manager</string>
    <string name="title_activity_lab_content">LabContentActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
