<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <EditText
            android:hint="@string/type_in_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_input_signup"></EditText>

    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <EditText
            android:hint="@string/type_in_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_input_signup"></EditText>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <EditText
            android:hint="@string/type_in_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_input_signup"></EditText>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <EditText
            android:hint="@string/type_in_sid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sid_input_signup"></EditText>

    </android.support.design.widget.TextInputLayout>



</LinearLayout>