<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#e7e4e4">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_choose_appointment_date"
                    android:id="@+id/choose_date_make_appoint"
                    android:layout_marginLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/date_make_appoint"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginRight="16dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fffefe"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_choose_appointment_time"
                    android:id="@+id/choose_time_make_appoint"
                    android:layout_marginLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/time_make_appoint"
                    android:layout_marginRight="16dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#ffffff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_appointment_team_member"
                    android:id="@+id/choose_member_make_appoint"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginLeft="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/member_make_appoint" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#ffffff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_choose_appointment_room"
                    android:id="@+id/choose_room_make_appoint"
                    android:layout_marginLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/room_make_appoint"
                    android:layout_marginRight="16dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#ffffff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_appointment_room_device"
                    android:id="@+id/textView8"
                    android:layout_marginLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp" />

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:id="@+id/list_default_device" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#ffffff"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="其他设备"
                    android:id="@+id/textView5"
                    android:layout_marginLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_weight="1" />

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/listView2" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>