<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentContainerAppoint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddAppointmentActivity"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appointment_toolbar"
            android:background="?attr/colorPrimary"
            android:popupTheme="@style/AppTheme.PopupOverlay">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_title"
                    android:id="@+id/imageView2"
                    android:layout_marginLeft="16dp"
                    android:paddingTop="4dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/title_make_appoint"
                    android:hint="标题"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginLeft="16dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_schedule"
                    android:id="@+id/imageView3"
                    android:layout_marginLeft="16dp"
                    android:paddingTop="4dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#ffffff">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_choose_appointment_date"
                            android:id="@+id/choose_date_make_appoint"
                            android:layout_marginLeft="16dp"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                            android:layout_weight="1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/date_make_appoint"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                            android:layout_marginRight="16dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fffefe">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_choose_start_appointment_time"
                            android:id="@+id/choose_start_time_make_appoint"
                            android:layout_marginLeft="16dp"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                            android:layout_weight="1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/start_time_make_appoint"
                            android:layout_marginRight="16dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fffefe">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_choose_end_appointment_time"
                            android:id="@+id/choose_end_time_make_appoint"
                            android:layout_marginLeft="16dp"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                            android:layout_weight="1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/end_time_make_appoint"
                            android:layout_marginRight="16dp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_group"
                    android:id="@+id/imageView4"
                    android:paddingTop="4dp"
                    android:layout_marginLeft="16dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_appointment_team_member"
                        android:id="@+id/choose_member_make_appoint"
                        android:layout_weight="1"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:layout_marginLeft="16dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/member_make_appoint"
                        android:layout_marginRight="16dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#ffffff">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_room"
                    android:id="@+id/imageView5"
                    android:layout_marginLeft="16dp"
                    android:paddingTop="4dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_choose_appointment_room"
                    android:id="@+id/choose_room_make_appoint"
                    android:layout_marginLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/room_make_appoint"
                    android:layout_marginRight="16dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#ffffff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_appointment_room_device"
                    android:id="@+id/textView8"
                    android:layout_marginLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp" />

            </LinearLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/list_default_device" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
